--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "1.0.0",
   "description": "Rule-validation API (Technical Test)",
   "main": "index.js",
+  "engines": {
+    "npm": "6.14.4",
+    "node": "14.2.0"
+  },
   "scripts": {
-    "start": "babel-node index.js",
     "dev": "nodemon index.js --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build . -s --ignore node_modules",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/index.js",
     "lint": "eslint . --fix --ignore-path .eslintignore"
   },
   "repository": {
@@ -31,6 +38,8 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/polyfill": "^7.12.1",
     "@hapi/joi": "^17.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
