Fixing production error

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "nodemon index.js --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel -d ./build . -s --ignore node_modules",
+    "build-babel": "babel -d ./build . -s",
     "build": "npm run clean && npm run build-babel",
     "heroku_start": "npm run build && node ./build/index.js",
     "lint": "eslint . --fix --ignore-path .eslintignore"
@@ -28,9 +28,11 @@
   },
   "homepage": "https://github.com/chidieberejoel/rule-validation-api#readme",
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-destructuring": "^7.12.1",
     "@babel/register": "^7.12.10",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -38,7 +40,6 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "@babel/cli": "^7.12.10",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
