--- a/package.json
+++ b/package.json
@@ -8,13 +8,8 @@
     "node": "14.2.0"
   },
   "scripts": {
-    "start": "babel-node index.js",
-    "dev": "nodemon index.js --exec babel-node",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel -d ./build . -s",
-    "build": "npm run clean && npm run build-babel",
-    "heroku_start": "npm run build && node ./build/index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "lint": "eslint . --fix --ignore-path .eslintignore"
   },
   "repository": {
@@ -28,21 +23,12 @@
   },
   "homepage": "https://github.com/chidieberejoel/rule-validation-api#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-transform-destructuring": "^7.12.1",
-    "@babel/register": "^7.12.10",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
